@@ -72,10 +72,22 @@ public class CgmesExport implements Exporter {
                 NamingStrategyFactory.create(Parameter.readString(getFormat(), params, NAMING_STRATEGY_PARAMETER, defaultValueConfig)))
                 .setExportBoundaryPowerFlows(Parameter.readBoolean(getFormat(), params, EXPORT_BOUNDARY_POWER_FLOWS_PARAMETER, defaultValueConfig))
                 .setExportFlowsForSwitches(Parameter.readBoolean(getFormat(), params, EXPORT_POWER_FLOWS_FOR_SWITCHES_PARAMETER, defaultValueConfig))
+                .setExportTransformersWithHighestVoltageAtEnd1(Parameter.readBoolean(getFormat(), params, EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_PARAMETER, defaultValueConfig))
                 .setEncodeIds(Parameter.readBoolean(getFormat(), params, ENCODE_IDS_PARAMETERS, defaultValueConfig))
                 .setBoundaryEqId(getBoundaryId("EQ", network, params, BOUNDARY_EQ_ID_PARAMETER))
                 .setBoundaryTpId(getBoundaryId("TP", network, params, BOUNDARY_TP_ID_PARAMETER))
                 .setReporter(reporter);
+        context.getEqModelDescription().setModelingAuthoritySet(Parameter.readString(getFormat(), params, MODELING_AUTHORITY_SET_PARAMETER, defaultValueConfig));
+        context.getTpModelDescription().setModelingAuthoritySet(Parameter.readString(getFormat(), params, MODELING_AUTHORITY_SET_PARAMETER, defaultValueConfig));
+        context.getSshModelDescription().setModelingAuthoritySet(Parameter.readString(getFormat(), params, MODELING_AUTHORITY_SET_PARAMETER, defaultValueConfig));
+        context.getSvModelDescription().setModelingAuthoritySet(Parameter.readString(getFormat(), params, MODELING_AUTHORITY_SET_PARAMETER, defaultValueConfig));
+        String modelDescription = Parameter.readString(getFormat(), params, MODEL_DESCRIPTION_PARAMETER, defaultValueConfig);
+        if (modelDescription != null) {
+            context.getEqModelDescription().setDescription(modelDescription);
+            context.getTpModelDescription().setDescription(modelDescription);
+            context.getSshModelDescription().setDescription(modelDescription);
+            context.getSvModelDescription().setDescription(modelDescription);
+        }
         String cimVersionParam = Parameter.readString(getFormat(), params, CIM_VERSION_PARAMETER, defaultValueConfig);
         if (cimVersionParam != null) {
             context.setCimVersion(Integer.parseInt(cimVersionParam));
@@ -133,7 +145,7 @@ public class CgmesExport implements Exporter {
         description.setIds(network.getPropertyNames().stream()
                 .filter(p -> p.startsWith(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + profile + "_ID"))
                 .map(network::getProperty)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private static void checkConsistency(List<String> profiles, Network network, CgmesExportContext context) {
@@ -177,6 +189,9 @@ public class CgmesExport implements Exporter {
     public static final String EXPORT_POWER_FLOWS_FOR_SWITCHES = "iidm.export.cgmes.export-power-flows-for-switches";
     public static final String NAMING_STRATEGY = "iidm.export.cgmes.naming-strategy";
     public static final String PROFILES = "iidm.export.cgmes.profiles";
+    public static final String MODELING_AUTHORITY_SET = "iidm.export.cgmes.modeling-authority-set";
+    public static final String MODEL_DESCRIPTION = "iidm.export.cgmes.model-description";
+    public static final String EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1 = "iidm.export.cgmes.export-transformers-with-highest-voltage-at-end1";
 
     private static final Parameter BASE_NAME_PARAMETER = new Parameter(
             BASE_NAME,
@@ -193,17 +208,17 @@ public class CgmesExport implements Exporter {
             ENCODE_IDS,
             ParameterType.BOOLEAN,
             "Encode IDs as valid URI",
-            Boolean.TRUE);
+            CgmesExportContext.ENCODE_IDS_DEFAULT_VALUE);
     private static final Parameter EXPORT_BOUNDARY_POWER_FLOWS_PARAMETER = new Parameter(
             EXPORT_BOUNDARY_POWER_FLOWS,
             ParameterType.BOOLEAN,
             "Export boundaries' power flows",
-            Boolean.TRUE);
+            CgmesExportContext.EXPORT_BOUNDARY_POWER_FLOWS_DEFAULT_VALUE);
     private static final Parameter EXPORT_POWER_FLOWS_FOR_SWITCHES_PARAMETER = new Parameter(
             EXPORT_POWER_FLOWS_FOR_SWITCHES,
             ParameterType.BOOLEAN,
             "Export power flows for switches",
-            Boolean.FALSE);
+            CgmesExportContext.EXPORT_POWER_FLOWS_FOR_SWITCHES_DEFAULT_VALUE);
     private static final Parameter NAMING_STRATEGY_PARAMETER = new Parameter(
             NAMING_STRATEGY,
             ParameterType.STRING,
@@ -227,6 +242,24 @@ public class CgmesExport implements Exporter {
             "Boundary TP model identifier",
             null);
 
+    private static final Parameter MODELING_AUTHORITY_SET_PARAMETER = new Parameter(
+            MODELING_AUTHORITY_SET,
+            ParameterType.STRING,
+            "Modeling authority set",
+            "powsybl.org");
+
+    private static final Parameter MODEL_DESCRIPTION_PARAMETER = new Parameter(
+            MODEL_DESCRIPTION,
+            ParameterType.STRING,
+            "Model description",
+            null);
+
+    private static final Parameter EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_PARAMETER = new Parameter(
+            EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1,
+            ParameterType.BOOLEAN,
+            "Export transformers with highest voltage at end1",
+            CgmesExportContext.EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_DEFAULT_VALUE);
+
     private static final List<Parameter> STATIC_PARAMETERS = List.of(
             BASE_NAME_PARAMETER,
             CIM_VERSION_PARAMETER,
@@ -235,7 +268,10 @@ public class CgmesExport implements Exporter {
             NAMING_STRATEGY_PARAMETER,
             PROFILES_PARAMETER,
             BOUNDARY_EQ_ID_PARAMETER,
-            BOUNDARY_TP_ID_PARAMETER);
+            BOUNDARY_TP_ID_PARAMETER,
+            MODELING_AUTHORITY_SET_PARAMETER,
+            MODEL_DESCRIPTION_PARAMETER,
+            EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_PARAMETER);
 
     private static final Logger LOG = LoggerFactory.getLogger(CgmesExport.class);
 }
